[project]
name = "audiostats"
version = "0.1.0"
description = ""
authors = [
    {name = "Olezhich"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cuetools (>=0.1.4,<0.2.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "tomlcfg (>=0.1.0,<0.2.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.ML.dependencies]
librosa = "^0.11.0"

[tool.poetry.group.db.dependencies]
alembic = "^1.16.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

